--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,11 @@ body {
   border: 10px solid black;
   border-radius: 20%;
 }
+.Btns{
+  display: flex;
+  gap:20px;
+  justify-content: center;
+}
 
 .game-over {
   background-color: red;
@@ -67,7 +72,7 @@ body {
   line-height: 35px;
   font-size: 25px;
 }
-.Rbtn{
+.btns{
   margin-top: 20px;
   width: 130px;
   padding: 15px;
